# src/app/openapi/services$/models/message-response.ts
@@ -2,13 +2,10 @@
 /* eslint-disable */
 /* Code generated by ng-openapi-gen DO NOT EDIT. */
 
-import { Abonnement } from '../models/abonnement';
-import { User } from '../models/user';
-export interface Message {
-  abonnement?: Abonnement;
-  id?: number;
+export interface MessageResponse {
+  abonnementId?: number;
   localDateTime?: string;
   message?: string;
-  receiver?: User;
+  receiverMail?: string;
   type?: 'CONFIRMATION' | 'VERIFICATION';
 }
