# src/app/openapi/services/models/ligne-abonnement-response.ts
@@ -2,7 +2,13 @@
 /* eslint-disable */
 /* Code generated by ng-openapi-gen DO NOT EDIT. */
 
-import { Panneau } from '../models/panneau';
 export interface LigneAbonnementResponse {
-  panneau: Panneau;
+  boulevardName?: string;
+  emplacement?: string;
+  nbrFace?: number;
+  taille?: number;
+  type?: string;
+  panneauId?: number;
+  price?: number;
+  printPrice?: number;
 }
