# src/app/openapi/services/models/message-response.ts
@@ -1,0 +1,11 @@
+/* tslint:disable */
+/* eslint-disable */
+/* Code generated by ng-openapi-gen DO NOT EDIT. */
+
+export interface MessageResponse {
+  abonnementId: number;
+  localDateTime: string;
+  message: string;
+  receiverMail: string;
+  type: 'CONFIRMATION' | 'VERIFICATION';
+}
