# src/app/openapi/services/models/message.ts
@@ -1,14 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-/* Code generated by ng-openapi-gen DO NOT EDIT. */
-
-import { Abonnement } from '../models/abonnement';
-import { User } from '../models/user';
-export interface Message {
-  abonnement?: Abonnement;
-  id?: number;
-  localDateTime?: string;
-  message?: string;
-  receiver?: User;
-  type?: 'CONFIRMATION' | 'VERIFICATION';
-}
